--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>net.eusashead.hateoas</groupId>
 	<artifactId>spring-conditional-response</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.1.RELEASE-SNAPSHOT</version>
+	<version>1.0.1.RELEASE</version>
 	<name>spring-conditional-response</name>
 	<description>Library for handling conditional GET, PUT and DELETE requests based on ETag headers in a non-intrusive way.</description>
 	<url>https://github.com/patrickvankann/spring-conditional-response</url>
@@ -25,7 +25,7 @@
 		<connection>scm:git:ssh://git@github.com:patrickvankann/spring-conditional-response.git</connection>
 		<developerConnection>scm:git:git@github.com:patrickvankann/spring-conditional-response.git</developerConnection>
 		<url>https://github.com/patrickvankann/spring-conditional-response</url>
-		<tag>HEAD</tag>
+		<tag>1.0.1.RELEASE</tag>
 	</scm>
 
 	<licenses>
